# zed

./: Cargo.toml
assets/icons/file_icons/: file_types.json
assets/settings/: default.json
crates/collab/: Cargo.toml
crates/copilot/: Cargo.toml
crates/copilot/src/: copilot.rs
crates/dap/: Cargo.toml
crates/dap/src/: adapters.rs
crates/dap_adapters/src/: javascript.rs  php.rs
crates/dev_container/: Cargo.toml
crates/dev_container_ui/: Cargo.toml
crates/dev_container_ui/src/: dev_container_ui.rs
crates/docker/: Cargo.toml
crates/docker_ui/: Cargo.toml
crates/docker_ui/src/: docker_ui.rs
crates/editor/src/: editor_settings.rs  element.rs
crates/eval/: Cargo.toml
crates/eval/src/: eval.rs  instance.rs
crates/extension_host/: Cargo.toml
crates/extension_host/benches/: extension_compilation_benchmark.rs
crates/extension_host/src/: extension_host.rs  extension_store_test.rs  headless_host.rs  wasm_host.rs
crates/inspector_ui/src/: inspector.rs
crates/js_runtime/: Cargo.toml
crates/js_runtime/src/: js_runtime.rs
crates/languages/: Cargo.toml
crates/languages/src/: css.rs  json.rs  lib.rs  python.rs  tailwind.rs  typescript.rs  vtsls.rs  yaml.rs
crates/markdown/: Cargo.toml
crates/markdown/examples/: markdown.rs  markdown_as_child.rs
crates/prettier/: Cargo.toml
crates/prettier/src/: prettier.rs
crates/project/: Cargo.toml
crates/project/src/: lsp_store.rs  prettier_store.rs  project.rs
crates/remote_server/: Cargo.toml
crates/remote_server/src/: unix.rs  (+2 more)
crates/workspace/: Cargo.toml
crates/zed/: Cargo.toml
(+13 files in other folders)
