[package]
name = "docker_ui"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/docker_ui.rs"
doctest = false

[dependencies]
gpui.workspace = true
workspace.workspace = true
time.workspace = true
ui.workspace = true
serde_derive.workspace = true
serde.workspace = true
settings.workspace = true
anyhow.workspace = true
schemars.workspace = true
project.workspace = true
serde_json.workspace = true
util.workspace = true
db.workspace = true
